<resources>
    <string name="app_name">Remember Activities</string>
    <string name="title_activity_add">addActivity</string>
    <string name="title_activity_first">firstActivity</string>
    <string name="nama_kegiatan">Nama Kegiatan</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="Tanggal_berakhir">Tanggal Berakhir</string>
    <string name="jam_berakhir">Jam Berakhir</string>
    <string name="ingatkan_sebelum">Ingatkan Sebelum</string>
    <string name="ulangi">Ulangi</string>
    <string name="catatan">Catatan</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>
    <string name="tambah_kegiatan">Tambah Kegiatan</string>
    <string name="kegiatan_anda">Kegiatan Anda</string>
    <string name="lihat_pencapaian">Lihat Pencapaian</string>
    <string name="Heloo">Hello,Kawan</string>
    <string name="subtitle_nav_draw">Semoga Harimu Menyengangkan</string>
    <string name="detail_Kegiatan">Detail Kegiatan</string>
    <string name="detail_pencapaian">Detail Pencapaian</string>
    <string name="detail_notifikasi">Detail Notifikasi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Selalu</item>
        <item>Jika mungkin</item>
        <item>Tidak</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
