<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    tools:context="org.d3if.rememberactivities.detailviewActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="24sp"
        android:id="@+id/textView_detailView"
        android:text="@string/nama_kegiatan"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tanggal"
            android:paddingLeft="16dp"
            android:paddingRight="5dp"
            android:textColor="@color/Black"
            android:id="@+id/textView_tanggal_kegiatan"
            android:paddingEnd="5dp"
            android:paddingStart="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam_mulai"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/Black"
            android:id="@+id/textView_jammulai"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tanggal_berakhir"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/Black"
            android:id="@+id/textView_tanggalakhir_kegiatan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam_mulai"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/Black"
            android:id="@+id/textView_jamberakhir"
            android:paddingEnd="10dp"
            android:paddingStart="5dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:text="@string/catatan"
        android:textColor="@color/Black"
        android:id="@+id/textView_catatan"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/edit"
            android:layout_gravity="center"
            android:id="@+id/btn_EditdetailingView"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/hapus"
            android:layout_gravity="center"
            android:id="@+id/btn_HapusdetailngView"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>